# HealthNotes

./: CMakeLists.txt  HealthNotes.json  HealthNotes.sln  HealthNotes.vcxproj  HealthNotes.vcxproj.filters  dllmain.cpp  package-plugin.py
src/: dllmain.cpp  plugin-utils.h  scanmem.h  signatures.h
